# course-materials

./: .flake8  .gitignore  DESCRIPTION  Makefile  README.md  environment.yml  jupyter_notebook_config.py  make.inc
R/: rmarkdown_setup.R
Rmd/: Makefile  README.Rmd
Rmd/guides/: Makefile  _output.yml  howto_provision_virtual_machine.Rmd
Rmd/homework/: Makefile  homework0.Rmd  homework1.Rmd  homework2a.Rmd  homework2c.Rmd
data/: final_project.csv  homeworks.csv  schedule.csv  software.csv
examples/: CMakeLists.txt  make.sh
examples/cuda_examples/: CMakeLists.txt
examples/cuda_examples/1DStencil/: CMakeLists.txt  exercise.cu
examples/cuda_examples/VectorAdd/: CMakeLists.txt  exercise.cu
examples/simd_with_intrinsics/: CMakeLists.txt  simd_example.cpp
guides/: howto_provision_virtual_machine.md
homework/: homework0.md  homework1.md  homework2a.md  homework2c.md
notebooks/sort_particles/: autograder.py  common.cpp  common.hpp  figures.py  particles.pxd  particles_naive_summary.txt  particles_sort_summary.txt  serial.cpp  serial.hpp  serial_history.txt  sort_particles.ipynb
