# IMPORTANT!
# DO NOT CHANGE ANYTHING IN THIS FILE!
# CUSTOM CHANGES TO COMPILER OPTIONS BELONG IN src/CMakeLists.txt

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(csi702_examples VERSION 2019.02.04 LANGUAGES CXX)
CMAKE_POLICY(SET CMP0012 NEW)

IF(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
  MESSAGE(FATAL_ERROR "Do not build in-source. Please remove CMakeCache.txt and the CMakeFiles/ directory. Then build out-of-source.")
ENDIF()

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_CXX_STANDARD 11)

# Use the Intel MKL Link Line Advisor for assistance with the MKL-specific flags
# URL: https://software.intel.com/en-us/articles/intel-mkl-link-line-advisor
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  MESSAGE(STATUS "macOS detected")
  SET(OS_SPECIFIC_C_FLAGS "-Wall -m64")
  SET(OS_SPECIFIC_CXX_FLAGS "-Wall -m64")
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  MESSAGE(FATAL_ERROR "Windows detected. The compiler settings for Windows are unknown.")
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  MESSAGE(STATUS "Linux detected")
  SET(OS_SPECIFIC_C_FLAGS "-Wall -m64")
  SET(OS_SPECIFIC_CXX_FLAGS "-Wall -m64")
ENDIF()

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OS_SPECIFIC_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OS_SPECIFIC_CXX_FLAGS}")
SET(CMAKE_INSTALL_PREFIX ${CMAKE_HOME_DIRECTORY})

SET(MKL_LIBRARIES ${OS_SPECIFIC_MKL_LIBRARIES})
SET(MKL_INCLUDE_DIRS ${OS_SPECIFIC_MKL_INCLUDE_DIRS})
SET(MKL_LINK_LINE ${OS_SPECIFIC_MKL_LINK_LINE})

SET(CLI11_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/vendor/CLI11/)

# ADD_LIBRARY(CLI11 INTERFACE)

# TARGET_INCLUDE_DIRECTORIES(CLI11 INTERFACE ${CLI11_INCLUDE_DIR})

# INCLUDE_DIRECTORIES(${MKL_INCLUDE_DIRS})
# LINK_DIRECTORIES(${MKL_LIBRARIES})

ADD_SUBDIRECTORY(simd_with_intrinsics)
ADD_SUBDIRECTORY(cuda_examples)
