PROJECT(cuda_vector_add CUDA CXX)

IF(NOT DEFINED CMAKE_CUDA_STANDARD)
  SET(CMAKE_CUDA_STANDARD 11)
  SET(CMAKE_CUDA_STANDARD_REQUIRED ON)
ENDIF()

# TODO: Adjust compiler flags/options by editing the OPTS variable
SET(OPTS -O3)

# TODO: New source files should be added to the HW1_CPP variable's list
SET(VECTOR_ADD_SRC exercise.cu)

# DO NOT ADJUST ANYTHING BELOW THIS LINE
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(${PROJECT_NAME}
  ${VECTOR_ADD_SRC}
)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME}
  PRIVATE
  ${OPTS}
)

INSTALL(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin/
)
